--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,6 +17,8 @@ div.sample-set {
   padding: 1vw;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-image: linear-gradient(45deg, #f7f7f7 25%, #f2f2f2 25%, #f2f2f2 50%, #f7f7f7 50%, #f7f7f7 75%, #f2f2f2 75%, #f2f2f2 100%);
+background-size: 22.63px 22.63px;
 }
 @media screen and (max-width: 1000px) {
   div.samples {
