BREAKING CHANGE: can switch between color modes
feat: new way to recalculate and distribute input channels
in all color modes in real time. To CSS allways go RGBA color mode
as main and base color mode
feat: add favicon
refactor: split code into components InputHex, InputColorChannelsSet,
SwitchColoreMode
refactor: add library file with shared functions and interfaces
(appLibrary)
feat: hex color mode handle "a" channel (transparency)
feat: bigger samples
feat: more responsive layout (CSS changes)
refactor: render by createRoot (react ^18)
refactor: change colorObjectsInterfaces - now "a" channel is needed
allways
tests: add unit tests for typeVerificationMethods
fix: hexaStringToRgbaObject handle "a" channel

--- a/src/styles/ColorController.css
+++ b/src/styles/ColorController.css
@@ -7,16 +7,29 @@
 div.color-controller {
   display: flex;
   flex-direction: column;
+  padding: 1px;
+  max-width: 50%;
 }
 
 div.color-controller > label {
   display: flex;
-  gap: 0.5vw;
-  font-size: smaller;
+  flex-direction: row;
+  font-size: x-small;
+  align-items: center;
+}
+div.color-controller-inputs-set{
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  font-size: x-small;
   align-items: center;
 }
 
 div.color-controller-title {
+  font-size: smaller;
+  margin-bottom: 1vh;
+}
+legend.color-controller-legend {
   font-size: smaller;
   margin-bottom: 1vh;
 }
@@ -26,7 +39,7 @@ input[name='hex'] {
   text-align: center;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1400px) {
   div.color-controller-title {
     font-size: x-small;
   }
@@ -37,6 +50,9 @@ input[name='hex'] {
     align-items: center;
   }
 }
+
+
+
 
 /* range input */
 
