--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,7 +20,8 @@ div.sample-set {
   background-image: linear-gradient(45deg, #f7f7f7 25%, #f2f2f2 25%, #f2f2f2 50%, #f7f7f7 50%, #f7f7f7 75%, #f2f2f2 75%, #f2f2f2 100%);
 background-size: 22.63px 22.63px;
 }
-@media screen and (max-width: 1000px) {
+
+@media screen and (max-width: 1400px) {
   div.samples {
     margin: 2vh auto;
     display: flex;
@@ -31,6 +32,16 @@ background-size: 22.63px 22.63px;
   div.sample-set {
     display: flex;
     flex-direction: row;
+    padding: 1vw;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+}
+@media screen and (max-width: 800px) {
+ 
+  div.sample-set {
+    display: flex;
+    flex-direction: column;
     padding: 1vw;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
