--- a/src/styles/ControlPanel.css
+++ b/src/styles/ControlPanel.css
@@ -1,22 +1,15 @@
 div.control-panel {
   display: flex;
-  gap: 1vw;
+  gap: 5px;
   margin-top: 3vh;
   background-color: rgb(206, 204, 204);
-  padding: 1vh 1vw;
+  padding: 10px 10px;
   border-radius: 5px;
   width: fit-content;
 }
-/* 
-div.control-panel-hexa {
-    display: flex;
-    gap: 1vw;
-    background-color: rgb(206, 204, 204);
-    padding: 5px;
-    border-radius: 5px;
-} */
 
-@media screen and (max-width: 1000px) {
+
+@media screen and (max-width: 1400px) {
   div.control-panel {
     display: flex;
     gap: 1vw;
