--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,24 +1,28 @@
-.App {
+div.App {
   text-align: center;
 }
 
 div.samples {
-  margin: 2vh auto;
+  /* margin: 5vh; */
+  padding: 10vw;
+  padding-top: 5vh;
   display: flex;
+  justify-content: center;
   gap: 1vw;
-  width: 70vw;
-  grid-template-columns: 33% 33% 33%;
+  max-width: 100vw;
 }
 
 div.sample-set {
   display: flex;
+  justify-self: center;
   flex-direction: column;
-  min-width: 33%;
   padding: 1vw;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  background-image: linear-gradient(45deg, #f7f7f7 25%, #f2f2f2 25%, #f2f2f2 50%, #f7f7f7 50%, #f7f7f7 75%, #f2f2f2 75%, #f2f2f2 100%);
-background-size: 22.63px 22.63px;
+  /* background-image: linear-gradient(45deg, #f7f7f7 25%, #f2f2f2 25%, #f2f2f2 50%, #f7f7f7 50%, #f7f7f7 75%, #f2f2f2 75%, #f2f2f2 100%);
+background-size: 22.63px 22.63px; */
+ background: rgb(0,3,17);
+background: linear-gradient(180deg, rgb(3, 3, 3) 0%, rgb(14, 14, 14) 100%);
 }
 
 @media screen and (max-width: 1400px) {
@@ -38,7 +42,6 @@ background-size: 22.63px 22.63px;
   }
 }
 @media screen and (max-width: 800px) {
- 
   div.sample-set {
     display: flex;
     flex-direction: column;
