--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,15 @@
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: darkgrey;
+background: rgb(0, 0, 0);
+background: linear-gradient(180deg, rgb(52, 52, 52) 0%, rgba(0,0,0,1) 100%);
 
 }
 
