--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,26 +3,26 @@ div.App {
 }
 
 div.samples {
-  /* margin: 5vh; */
   padding: 10vw;
   padding-top: 5vh;
   display: flex;
   justify-content: center;
   gap: 1vw;
   max-width: 100vw;
+
 }
 
 div.sample-set {
   display: flex;
-  justify-self: center;
+  gap: 1vw;
+  align-self: stretch;
   flex-direction: column;
   padding: 1vw;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  /* background-image: linear-gradient(45deg, #f7f7f7 25%, #f2f2f2 25%, #f2f2f2 50%, #f7f7f7 50%, #f7f7f7 75%, #f2f2f2 75%, #f2f2f2 100%);
-background-size: 22.63px 22.63px; */
- background: rgb(0,3,17);
-background: linear-gradient(180deg, rgb(3, 3, 3) 0%, rgb(14, 14, 14) 100%);
+  box-shadow: rgb(28, 28, 28) 0px 3px 8px;
+  background: rgba(10, 10, 10, 0.478);
+  border: 1px solid black;
+  border-right: 1px solid black;
 }
 
 @media screen and (max-width: 1400px) {
@@ -30,23 +30,19 @@ background: linear-gradient(180deg, rgb(3, 3, 3) 0%, rgb(14, 14, 14) 100%);
     margin: 2vh auto;
     display: flex;
     flex-direction: column;
-    gap: 1vw;
     width: 70vw;
   }
   div.sample-set {
     display: flex;
     flex-direction: row;
     padding: 1vw;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   }
 }
 @media screen and (max-width: 800px) {
   div.sample-set {
     display: flex;
     flex-direction: column;
-    padding: 1vw;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 2vw;
+    gap: 0.5vw;
   }
 }
