--- a/src/styles/Sample.css
+++ b/src/styles/Sample.css
@@ -1,6 +1,7 @@
 
 div.sample {
   width: auto;
+  margin: 0 auto;
   height: fit-content;
   padding: 1vw;
   border-radius: 10px;
@@ -14,7 +15,6 @@ p.sample {
     width: 60%;
     height: fit-content;
     padding: 1vw;
-    margin-right: 10px;
   }
   
   p.sample {
@@ -26,8 +26,7 @@ p.sample {
   div.sample {
     width: auto;
     height: fit-content;
-    padding: 1vw;
-    margin-right: 10px;
+    padding: 2vw;
   }
   
   p.sample {
