fix: hexA input fixed
Input field, handel method, output and input props divided into two
parts: hex string and alpha channel. Alpha channel value is converted to
hexadecimal only on screen.
Add for test regex matching for hex input.

--- a/src/styles/ColorController.css
+++ b/src/styles/ColorController.css
@@ -24,6 +24,19 @@ div.color-controller-inputs-set{
   font-size: x-small;
   align-items: center;
 }
+div.hex-inputs{
+  display: flex;
+  flex-direction: row;
+  gap: 2px;
+  font-size: x-small;
+  align-items: center;
+}
+input.hex {
+  width: 80%;
+}
+input.a-hex {
+  width: 15%;
+}
 
 fieldset.color-controller-fieldset {
   font-size: smaller;
